After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 728521 - Profiling with uprof does not work when clutter_main() is not used
Profiling with uprof does not work when clutter_main() is not used
Status: RESOLVED FIXED
Product: clutter
Classification: Platform
Component: general
1.16.x
Other Mac OS
: Normal normal
: ---
Assigned To: clutter-maint
clutter-maint
Depends on:
Blocks:
 
 
Reported: 2014-04-18 18:13 UTC by Gustavo Noronha (kov)
Modified: 2014-04-18 22:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
clutter-main: start mainloop timer on clutter_init() (2.57 KB, patch)
2014-04-18 18:20 UTC, Gustavo Noronha (kov)
committed Details | Review

Description Gustavo Noronha (kov) 2014-04-18 18:13:17 UTC
This means any application using GApplication to run the main loop, say, won't print the uprof report upon termination.
Comment 1 Gustavo Noronha (kov) 2014-04-18 18:20:46 UTC
Created attachment 274701 [details] [review]
clutter-main: start mainloop timer on clutter_init()

By creating and starting the timer on clutter_main() an assumption is made
that that is how the main loop will be run for all clutter applications.
With more and more applications moving to GApplication, this assumption no
longer holds true.

Moving to clutter_init() means we are starting the timer earlier than we
should, and by not stopping it when the main loop quits we are taking a
measure that is later than we should. I believe it is safe to consider
those are close enough to the actual beginning and quitting of the main
loop in practice.
Comment 2 Emmanuele Bassi (:ebassi) 2014-04-18 18:24:02 UTC
Review of attachment 274701 [details] [review]:

looks good to me. feel free to push it to the clutter-1.18 branch.
Comment 3 Gustavo Noronha (kov) 2014-04-18 22:06:48 UTC
Comment on attachment 274701 [details] [review]
clutter-main: start mainloop timer on clutter_init()

Pushed to master as bfba8cd and to clutter-1.18 as d7b183a.